src/objects/Participant_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Office__c</fullName>
        <label>Contact Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Contacts</relationshipLabel>
        <relationshipName>Participant_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Participant Contacts</relationshipLabel>
        <relationshipName>Participant_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Job Title for Participant Contact</inlineHelpText>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Participant Contact</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Participant Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>